Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28736

UBSan: divide by zero errors in stats calculation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • 5.5.0
    • couchbase-bucket
    • Untriaged
    • Unknown

    Description

      As reported by UBSan, there are floating-point divide-by-zero errors in stats generation - e.g.

      [ RUN      ] CollectionsDcpTest.test_dcp_create_delete
      /Users/dave/repos/couchbase/server/source/kv_engine/engines/ep/src/ep_engine.cc:2899:31: runtime error: division by zero
      ...
      [ RUN      ] CollectionsEraserTests/CollectionsEraserTest.basic_4_collections/PersistentFE
      /Users/dave/repos/couchbase/server/source/kv_engine/engines/ep/src/vbucket.cc:555:67: runtime error: division by zero
      

      Attachments

        For Gerrit Dashboard: MB-28736
        # Subject Branch Project Status CR V

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty