MB-28736: UBSan: Fix undefined divide-by-zero errors

As reported by UBSan, there are floating-point divide-by-zero errors
in stats generation.

Address by adding an explicit zero check on the denominator, and
returning 0 for the stat in that case.

Change-Id: Idddf44ec752da73467f08b6d673c2f95bd1be0ba
Reviewed-on: http://review.couchbase.org/91016
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Build Bot <build@couchbase.com>